# hawk

./: .gitignore  .pre-commit-config.yml  README.md  docker-compose.yml  pyproject.toml  report.html  requirements_dev.txt
.github/workflows/: code_quality.yml
examples/: bookings.py  churn_prediction.py  data_diff_generation.py  data_logging.py  data_profile_generation.py  employees_pipeline.py  pipeline_monitoring.py  report_generation.py  test_profile.py
examples/datasets/: 01-employees_v1.schema  contract_info.csv  employees_v1.csv  netflix.csv
hawk/: __init__.py  data_profile.py  exceptions.py  settings.py
hawk/data_logging/: api.py  entities.py  functions.py  pipeline_run.py
hawk/data_profiling/: column.py  correlation.py  data_profile.py
hawk/data_stats/: base_types.py  column.py  correlation.py  data_profile.py  diff.py  settings.py  stat_types.py  utils.py
hawk/data_stats/column/: categorical.py  factory.py  general.py  numeric.py
hawk/data_stats/stat_calculators/: base.py
hawk/monitoring/: api.py  entities.py
hawk/visualization/: html_generation.py  report.py  utils.py
hawk/visualization/templates/: column_information.html  dataset.html  main.html  preprocessing_step.html  style.css
pipeline_monitor/: exceptions.py
pipeline_monitor/entities/: data_profile.py  dataset.py
requirements/: pipeline_requirements.txt  requirements.txt  requirements_dev.txt
server/api/: Dockerfile  main.py  requirements.txt
server/ui/: Dockerfile  package-lock.json  package.json
server/ui/src/app/: api-client.js  layout.js  (+1 more)
tests/monitoring/: test_api.py
(+8 files in other folders)
